--- a/Frontend/src/app/income-table/income-table.component.html
+++ b/Frontend/src/app/income-table/income-table.component.html
@@ -2,7 +2,7 @@
   <thead style="background-color: #B8DAFF; border-color: #8F8DF1;">
   <tr>
     <th scope="col">#</th>
-    <th scope="col"><span i18n>Datum</span>
+    <th scope="col"><span i18n>Date</span>
       <button class="btn sort-btn" (click)="tableSort('date')">
         <i
           [ngClass]="{'bi-filter': options.sort.order !== 'date',
@@ -11,7 +11,7 @@
           class="bi sort-arrow"></i>
       </button>
     </th>
-    <th scope="col"><span i18n>Izvor</span>
+    <th scope="col"><span i18n>Source</span>
       <button class="btn sort-btn" (click)="tableSort('source')">
         <i
           [ngClass]="{'bi-filter': options.sort.order !== 'source',
@@ -20,7 +20,7 @@
           class="bi sort-arrow"></i>
       </button>
     </th>
-    <th scope="col"><span i18n>Prihod</span>
+    <th scope="col"><span i18n>Income</span>
       <button class="btn sort-btn" (click)="tableSort('earning')">
         <i
           [ngClass]="{'bi-filter': options.sort.order !== 'earning',
@@ -29,8 +29,8 @@
           class="bi sort-arrow"></i>
       </button>
     </th>
-    <th scope="col" i18n>Izmeni</th>
-    <th scope="col" i18n>Obriši</th>
+    <th scope="col" i18n>Edit</th>
+    <th scope="col" i18n>Delete</th>
   </tr>
   </thead>
   <tbody>
@@ -59,11 +59,11 @@
   </div>
   <div class="col-2"></div>
   <div class="col-6 tr">
-    <button class="btn btn-outline-primary option-btns" (click)="goToQuestions()" style="margin-right: 40px" i18n>Pitanja</button>
+    <button class="btn btn-outline-primary option-btns" (click)="goToQuestions()" style="margin-right: 40px" i18n>Questions</button>
     <button class="btn btn-outline-primary option-btns" (click)="goToExpensesTable()" style="margin-right: 40px" i18n>
-      Troškovi
+      Expenses
     </button>
-    <button class="btn btn-outline-primary option-btns" (click)="goToIncomeForm()" i18n>Dodaj prihod</button>
+    <button class="btn btn-outline-primary option-btns" (click)="goToIncomeForm()" i18n>Add income</button>
   </div>
 </div>
 
