--- a/Frontend/src/app/expense-table/expense-table.component.html
+++ b/Frontend/src/app/expense-table/expense-table.component.html
@@ -2,7 +2,7 @@
   <thead style="background-color: #B8DAFF; border-color: #8F8DF1;">
   <tr>
     <th scope="col">#</th>
-    <th scope="col"><span i18n>Datum kupovine</span>
+    <th scope="col"><span i18n>Date</span>
       <button class="btn sort-btn" (click)="tableSort('date')">
         <i
           [ngClass]="{'bi-filter': options.sort.order !== 'date',
@@ -11,7 +11,7 @@
           class="bi sort-arrow"></i>
       </button>
     </th>
-    <th scope="col"><span i18n>Prodavnica</span>
+    <th scope="col"><span i18n>Shop</span>
       <button class="btn sort-btn" (click)="tableSort('shop')">
         <i
           [ngClass]="{'bi-filter': options.sort.order !== 'shop',
@@ -20,7 +20,7 @@
           class="bi sort-arrow"></i>
       </button>
     </th>
-    <th scope="col"><span i18n>Trošak</span>
+    <th scope="col"><span i18n>Cost</span>
       <button class="btn sort-btn" (click)="tableSort('cost')">
         <i
           [ngClass]="{'bi-filter': options.sort.order !== 'cost',
@@ -29,7 +29,7 @@
           class="bi sort-arrow"></i>
       </button>
     </th>
-    <th scope="col"><span i18n>Kategorija</span>
+    <th scope="col"><span i18n>Category</span>
       <button class="btn sort-btn" (click)="tableSort('category')">
         <i
           [ngClass]="{'bi-filter': options.sort.order !== 'category',
@@ -38,8 +38,8 @@
           class="bi sort-arrow"></i>
       </button>
     </th>
-    <th scope="col" i18n>Izmeni</th>
-    <th scope="col" i18n>Obriši</th>
+    <th scope="col" i18n>Edit</th>
+    <th scope="col" i18n>Delete</th>
   </tr>
   </thead>
   <tbody>
@@ -69,9 +69,9 @@
   </div>
   <div class="col-2"></div>
   <div class="col-6 tr">
-    <button class="btn btn-outline-primary option-btns" (click)="goToQuestions()" style="margin-right: 40px" i18n>Pitanja</button>
-    <button class="btn btn-outline-primary option-btns" (click)="goToIncomeTable()" style="margin-right: 40px" i18n>Prihodi</button>
-    <button class="btn btn-outline-primary option-btns" (click)="goToAddExpense()" i18n>Dodaj trošak</button>
+    <button class="btn btn-outline-primary option-btns" (click)="goToQuestions()" style="margin-right: 40px" i18n>Questions</button>
+    <button class="btn btn-outline-primary option-btns" (click)="goToIncomeTable()" style="margin-right: 40px" i18n>Incomes</button>
+    <button class="btn btn-outline-primary option-btns" (click)="goToAddExpense()" i18n>Add expense</button>
   </div>
 </div>
 
