--- a/Frontend/src/app/yes-no-dialog/yes-no-dialog.component.html
+++ b/Frontend/src/app/yes-no-dialog/yes-no-dialog.component.html
@@ -2,9 +2,7 @@
   <h4 class="modal-title" id="modal-basic-title">{{title}}</h4>
   <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
 </div>
-<!--<div class="modal-body">-->
-<!--</div>-->
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('no')" i18n>Ne</button>
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('yes')" i18n>Da</button>
+  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('no')" i18n>No</button>
+  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('yes')" i18n>Yes</button>
 </div>
