--- a/Frontend/src/app/login-register/login-register.component.html
+++ b/Frontend/src/app/login-register/login-register.component.html
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="col-4"></div>
   <div class="col-4">
-    <!-- Pills navs -->
     <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
       <li class="nav-item" role="presentation">
         <button class="nav-link" [ngClass]="{'active': loginForm === true}" id="tab-login" data-mdb-toggle="pill"
@@ -16,145 +15,54 @@
         </button>
       </li>
     </ul>
-    <!-- Pills navs -->
-
-    <!-- Pills content -->
     <div class="tab-content">
       <div class="tab-pane fade" [ngClass]="{'active': loginForm === true, 'show': loginForm === true}"
            id="pills-login" role="tabpanel" aria-labelledby="tab-login">
         <form [formGroup]="loginFormGroup" (submit)="submitLogin()">
-          <!--      <div class="text-center mb-3">-->
-          <!--        <p>Sign in with:</p>-->
-          <!--        <button type="button" class="btn btn-link btn-floating mx-1">-->
-          <!--          <i class="fab fa-facebook-f"></i>-->
-          <!--        </button>-->
-
-          <!--        <button type="button" class="btn btn-link btn-floating mx-1">-->
-          <!--          <i class="fab fa-google"></i>-->
-          <!--        </button>-->
-
-          <!--        <button type="button" class="btn btn-link btn-floating mx-1">-->
-          <!--          <i class="fab fa-twitter"></i>-->
-          <!--        </button>-->
-
-          <!--        <button type="button" class="btn btn-link btn-floating mx-1">-->
-          <!--          <i class="fab fa-github"></i>-->
-          <!--        </button>-->
-          <!--      </div>-->
-
-          <!--      <p class="text-center">or:</p>-->
-
-          <!-- Email input -->
           <div class="form-outline mb-4">
-            <input type="text" id="loginName" class="form-control" formControlName="username" placeholder="Username"/>
-            <!--        <label class="form-label" for="loginName">Email or username</label>-->
+            <input type="text" id="loginName" class="form-control" formControlName="username" placeholder="Username" required/>
           </div>
 
-          <!-- Password input -->
           <div class="form-outline mb-4">
-            <input type="password" id="loginPassword" class="form-control" formControlName="password"
-                   placeholder="Password"/>
-            <!--        <label class="form-label" for="loginPassword">Password</label>-->
+            <input type="password" id="loginPassword" class="form-control" formControlName="password" placeholder="Password" required/>
           </div>
 
-          <!--      &lt;!&ndash; 2 column grid layout &ndash;&gt;-->
-          <!--      <div class="row mb-4">-->
-          <!--        <div class="col-md-6 d-flex justify-content-center">-->
-          <!--          &lt;!&ndash; Checkbox &ndash;&gt;-->
-          <!--          <div class="form-check mb-3 mb-md-0">-->
-          <!--            <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />-->
-          <!--            <label class="form-check-label" for="loginCheck"> Remember me </label>-->
-          <!--          </div>-->
-          <!--        </div>-->
-
-          <!--        <div class="col-md-6 d-flex justify-content-center">-->
-          <!--          &lt;!&ndash; Simple link &ndash;&gt;-->
-          <!--          <a href="#!">Forgot password?</a>-->
-          <!--        </div>-->
-          <!--      </div>-->
-
-          <!-- Submit button -->
-          <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
-
-          <!-- Register buttons -->
-          <!--      <div class="text-center">-->
-          <!--        <p>Not a member? <a href="#!">Register</a></p>-->
-          <!--      </div>-->
+          <button type="submit" [disabled]="!loginFormGroup.valid || loginFormGroup.get('username').value === '' || loginFormGroup.get('password').value === ''" class="btn btn-primary btn-block mb-4">Sign in</button>
         </form>
+
       </div>
       <div class="tab-pane fade" [ngClass]="{'active': loginForm === false, 'show': loginForm === false}"
            id="pills-register" role="tabpanel" aria-labelledby="tab-register">
         <form [formGroup]="registerFormGroup" (submit)="submitRegister()">
-          <!--      <div class="text-center mb-3">-->
-          <!--        <p>Sign up with:</p>-->
-          <!--        <button type="button" class="btn btn-link btn-floating mx-1">-->
-          <!--          <i class="fab fa-facebook-f"></i>-->
-          <!--        </button>-->
-
-          <!--        <button type="button" class="btn btn-link btn-floating mx-1">-->
-          <!--          <i class="fab fa-google"></i>-->
-          <!--        </button>-->
-
-          <!--        <button type="button" class="btn btn-link btn-floating mx-1">-->
-          <!--          <i class="fab fa-twitter"></i>-->
-          <!--        </button>-->
-
-          <!--        <button type="button" class="btn btn-link btn-floating mx-1">-->
-          <!--          <i class="fab fa-github"></i>-->
-          <!--        </button>-->
-          <!--      </div>-->
-
-          <!--      <p class="text-center">or:</p>-->
-
-          <!-- Name input -->
           <div class="form-outline mb-4">
             <input type="text" id="registerFirstName" formControlName="firstName" class="form-control"
-                   placeholder="First name"/>
-            <!--            <label class="form-label" for="registerName">Name</label>-->
+                   placeholder="First name" required/>
           </div>
 
           <div class="form-outline mb-4">
             <input type="text" id="registerLastName" formControlName="lastName" class="form-control"
-                   placeholder="Last name"/>
-            <!--            <label class="form-label" for="registerEmail">Email</label>-->
+                   placeholder="Last name" required/>
           </div>
 
-          <!-- Username input -->
           <div class="form-outline mb-4">
             <input type="text" id="registerUsername" formControlName="username" class="form-control"
-                   placeholder="Username"/>
-            <!--            <label class="form-label" for="registerUsername">Username</label>-->
+                   placeholder="Username" required/>
           </div>
 
-          <!-- Password input -->
           <div class="form-outline mb-4">
             <input type="password" id="registerPassword" formControlName="password" class="form-control"
-                   placeholder="Password"/>
-            <!--            <label class="form-label" for="registerPassword">Password</label>-->
+                   placeholder="Password" required/>
           </div>
 
-          <!-- Repeat Password input -->
           <div class="form-outline mb-4">
             <input type="password" id="registerRepeatPassword" formControlName="confPassword" class="form-control"
-                   placeholder="Confirm password"/>
-            <!--            <label class="form-label" for="registerRepeatPassword">Repeat password</label>-->
+                   placeholder="Confirm password" required/>
           </div>
 
-          <!-- Checkbox -->
-          <!--      <div class="form-check d-flex justify-content-center mb-4">-->
-          <!--        <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked-->
-          <!--               aria-describedby="registerCheckHelpText" />-->
-          <!--        <label class="form-check-label" for="registerCheck">-->
-          <!--          I have read and agree to the terms-->
-          <!--        </label>-->
-          <!--      </div>-->
-
-          <!-- Submit button -->
-          <button type="submit" class="btn btn-primary btn-block mb-3">Sign in</button>
+          <button type="submit" [disabled]="!registerFormGroup.valid || registerFormGroup.get('firstName').value === '' || registerFormGroup.get('lastName').value === '' || registerFormGroup.get('username').value === '' || registerFormGroup.get('password').value === '' || registerFormGroup.get('confPassword').value === ''" class="btn btn-primary btn-block mb-3">Sign in</button>
         </form>
       </div>
     </div>
-    <!-- Pills content -->
   </div>
   <div class="col-4"></div>
 </div>
